[package]
name = "energy_management_system"
version = "0.1.0"
edition = "2021"

# These versions were current when reqwest 0.11 was released and avoid the
# icu_*/idna chain that requires rustc >= 1.82. On a modern toolchain (>= 1.82)
# you can remove the exact pins and just use "0.11" / "0.10" etc.
[dependencies]
log        = "0.4"
env_logger = "0.10"
reqwest    = { version = "0.11", features = ["json"] }
tokio      = { version = "1",    features = ["full"] }
chrono     = { version = "0.4",  features = ["serde"] }
serde      = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
futures    = "0.3"
